# MED-AD-REV2

./: .gitignore
backend/: .env.example  README.md  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/config/: logging.py  settings.py
backend/tests/: conftest.py
docs/: 00_implementation_todo.md  01_medical_ad_image_review_agent_prd.md  11_data_schema_model.md  12_api_contract.md  13_tech_stack_rulebook.md  14_flowchart.md  15_ui_ux_design_system.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/ui/: index.ts
frontend/src/hooks/: useApi.ts
frontend/src/lib/: utils.ts
frontend/src/services/: api.ts
frontend/src/stores/: index.ts
frontend/src/types/: index.ts
