[project]
name = "medadreview-backend"
version = "0.1.0"
description = "Medical Advertisement Review AI Agent Backend"
authors = [
    {name = "MedAdReview Team"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.45,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "redis (>=7.1.0,<8.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-core (>=1.2.6,<2.0.0)",
    "langchain-anthropic (>=1.3.1,<2.0.0)",
    "langchain-openai (>=1.1.6,<2.0.0)",
    "langgraph (>=1.0.5,<2.0.0)",
    "pinecone-client (>=6.0.0,<7.0.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "opencv-python-headless (>=4.12.0.88,<5.0.0.0)",
    "pillow (>=12.1.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "alembic (>=1.17.2,<2.0.0)"
]
